<resources>
    <string name="app_name">慢阻肺疾病管理app</string>

    <!--*************************数据库信息*********************-->
    <string name="database_url">jdbc:mysql://10.0.2.2:3306/test</string>
    <string name="database_username">copd</string>
    <string name="database_password">123456</string>

    <!-- ************************* 登录界面 ******************** -->
    <string name="login_titleName">登陆界面</string>
    <string name="login_accountInputHint">账号</string>
    <string name="login_passwordInputHint">密码</string>
    <string name="login_loginButtonName">登录</string>
    <string name="login_signupButtonName">注册账号</string>
    <string name="login_forgetPwdButtonName">忘记密码</string>

    <!-- ************************* 注册界面 ******************** -->
    <string name="signup_titleName">注册账号</string>
    <string name="signup_accountTitleName">手机号码</string>
    <string name="signup_passwordTitleName">重复密码</string>
    <string name="signup_passwordInputHint">请重复登录密码</string>
    <string name="signup_identifyingCode">验证码</string>
    <string name="signup_identifyingCodeHint">请输入手机验证码</string>
    <string name="signup_identifyingCodeSend">发送验证码</string>
    <string name="signup_accountType">账号类型</string>
    <string name="signup_accountTypePatient">患者</string>
    <string name="signup_accountTypeDoctor">医生</string>
    <string name="signup_signup">注册</string>

    <!-- ************************* 忘记密码界面 ******************** -->
    <string name="forgetpwd_titleName">修改密码</string>
    <string name="forgetpwd_accountTitleName">手机号码</string>
    <string name="forgetpwd_passwordTitleName">重复密码</string>
    <string name="forgetpwd_passwordInputHint">请重复登录密码</string>
    <string name="forgetpwd_identifyingCode">验证码</string>
    <string name="forgetpwd_identifyingCodeHint">请输入手机验证码</string>
    <string name="forgetpwd_identifyingCodeSend">发送验证码</string>
    <string name="forgetpwd_changepwd">确认修改</string>

    <!-- ************************* 底部导航栏 ******************** -->
    <string name="menu_patientlist">患者列表</string>
    <string name="menu_messagelist">消息列表</string>
    <string name="menu_nursingplan">护理计划</string>
    <string name="menu_personalcenter">个人中心</string>

    <!-- ************************* 消息界面 ******************** -->
    <string name="message_title">消息通知</string>

    <!-- *************************健康中心********************** -->
    <string name="healthcenter_project1">FEV1(第一秒用力呼气容积):</string>
    <string name="healthcenter_project2">FVC(用力肺活量):</string>
    <string name="healthcenter_project3">VC(肺活量):</string>
    <string name="healthcenter_projectcaculate">FEV1/FVC:</string>
    <string name="notice">正常范围：FEV1/FVC>70%</string>
    <string name="healthcenter_unit">ml</string>
    <string name="healthcenter_center2">更新数据</string>
    <string name="healthcenter_center3">历史数据</string>
    <string name="healthcenter_cancel">取消</string>
    <string name="healthcenter_submit">提交</string>
    <string name="healthcenter_returnback">返回</string>
    <string name="healthcenter_defaultdata">0ml</string>
    
    <!--***************************患者列表*********************** -->
    <string name="patientlist_title">患者列表</string>
    <string name="patientlist_photo">头像</string>
    <string name="patientlist_name">姓名</string>
    <string name="patientlist_sex">性别</string>
    <string name="patientlist_sex_man">男</string>
    <string name="patientlist_sex_woman">女</string>
    <string name="patientlist_age">年龄</string>
    <string name="patientlist_account">账号</string>
    <string name="patientlist_location">所在地</string>
    <string name="patientlist_returnback">返回</string>
    <string name="patientlist_sendmessage">消息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_doctor_my_info">DoctorMyInfoActivity</string>
    <string name="title_activity_doctor_my_info_modify">DoctorMyInfoModifyActivity</string>
    <string name="title_activity_doctor_password">DoctorPasswordActivity</string>
    <string name="title_activity_doctor_signing">DoctorSigningActivity</string>
    <string name="title_activity_patient_add_equipment">PatientAddEquipmentActivity</string>
    <string name="title_activity_patient_change_portrait">PatientChangePortraitActivity</string>
    <string name="title_activity_patient_my_doctor">PatientMyDoctorActivity</string>
    <string name="title_activity_patient_my_equipment">PatientMyEquipmentActivity</string>
    <string name="title_activity_patient_my_info">PatientMyInfoActivity</string>
    <string name="title_activity_patient_pass_succeed">PatientPassSucceedActivity</string>
    <string name="title_activity_patient_password">PatientPasswordActivity</string>
    <string name="title_activity_patient_per_info_modify">PatientPerInfoModifyActivity</string>
    <string name="title_activity_patient_person_center">PatientPersonCenterActivity</string>
    <string name="title_activity_doctor_person_center">DoctorPersonCenter</string>

    <!--  ***********************患者端个人中心界面********************-->

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_patient_doctor_advice">PatientDoctorAdviceActivity</string>
    <string name="title_activity_patient_setting">PatientSetting</string>
</resources>
