<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.health.HealthCenterUpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:clickable="true"
        android:focusable="true">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/teal"
            android:text="@string/healthcenter_cancel"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/healthcenter_center2"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/teal"
            android:text="@string/healthcenter_submit"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/lungv" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updatetext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/healthcenter_project1"
            android:textColor="@color/teal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/updatedata1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_radiuborder"
            android:ems="4"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/unit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthcenter_unit"
            android:textColor="@color/teal"
            android:textSize="20sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#d7d7d7"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/lungair" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updatetext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/healthcenter_project2"
            android:textColor="@color/teal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/updatedata2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_radiuborder"
            android:ems="4"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/unit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthcenter_unit"
            android:textColor="@color/teal"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#d7d7d7"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/lung" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updatetext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/healthcenter_project3"
            android:textColor="@color/teal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/updatedata3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_radiuborder"
            android:ems="4"
            android:inputType="number"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/unit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthcenter_unit"
            android:textColor="@color/teal"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>