<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".feature.list.UserInfoActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/top"
            android:background="@color/teal">

            <Button
                android:id="@+id/gotomainlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:textColor="@color/white"
                android:text="@string/patientlist_returnback"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:text="@string/patientlist_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/sendmessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal"
                android:textColor="@color/white"
                android:text="@string/patientlist_sendmessage"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/phototext"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical"
            android:text="@string/patientlist_photo"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top" />

        <ImageView
            android:id="@+id/headphoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/headphoto"/>

        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/patientlist_name"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phototext" />

        <TextView
            android:id="@+id/patientname"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headphoto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientname" />

        <TextView
            android:id="@+id/sextext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/patientlist_sex"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nametext" />

        <TextView
            android:id="@+id/patientsex"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patientname" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientsex"/>

        <TextView
            android:id="@+id/agetext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/patientlist_age"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sextext" />

        <TextView
            android:id="@+id/patientage"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patientsex" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientage"/>

        <TextView
            android:id="@+id/accounttext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/patientlist_account"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agetext" />

        <TextView
            android:id="@+id/patientaccount"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patientage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientaccount"/>

        <TextView
            android:id="@+id/locationtext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/patientlist_location"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accounttext" />

        <TextView
            android:id="@+id/patientlocation"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/patientaccount" />

        <View
            android:id="@+id/divide"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@id/patientlocation"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientlocation"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toTopOf="@id/patientmedicalhistory"/>

        <TextView
            android:id="@+id/medicalhistorytext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patientlist_medicalhistory"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divide" />

        <TextView
            android:id="@+id/patientmedicalhistory"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/divide"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientmedicalhistory"/>

        <TextView
            android:id="@+id/medicalordertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patientlist_medicalorder"
            android:textSize="25sp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/patientmedicalhistory"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/patientmedicalorder"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/patientmedicalhistory"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/patientmedicalorder"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>